--------------------------------------------------------------------------------
drkns 2024-01-03 18:53:27+00:00 - build 6246

1. More ranges.

2. Use std-like source_location.

--------------------------------------------------------------------------------
yjh 2024-01-03 10:58:29+03:00 - build 6245

1. fmt v10.2.

--------------------------------------------------------------------------------
MZK 2024-01-01 00:00:00-08:00 - build 6244

1. More `VMenu` refactoring.

--------------------------------------------------------------------------------
drkns 2023-12-30 20:09:55+00:00 - build 6243

1. Refactoring.

--------------------------------------------------------------------------------
drkns 2023-12-30 12:07:31+00:00 - build 6242

1. Use bit_cast where appropriate.

2. Warnings.

--------------------------------------------------------------------------------
drkns 2023-12-30 01:44:13+00:00 - build 6241

1. gh-769: "Find All" list is truncated from the top on a short screen.

--------------------------------------------------------------------------------
MZK 2023-12-29 16:07:42-08:00 - build 6240

1. Refactored `VMenu::ShowMenu` and its vicinity.

--------------------------------------------------------------------------------
drkns 2023-12-29 22:04:10+00:00 - build 6239

1. Refactoring.

2. Logging improvements.

3. More info in crash reports.

--------------------------------------------------------------------------------
drkns 2023-12-28 21:59:39+00:00 - build 6238

1. Crash on empty regex groups.

--------------------------------------------------------------------------------
drkns 2023-12-28 19:20:35+00:00 - build 6237

1. And another.

--------------------------------------------------------------------------------
drkns 2023-12-27 23:11:57+00:00 - build 6236

1. Another attempt to make nested user screens work.

--------------------------------------------------------------------------------
drkns 2023-12-23 21:23:54+00:00 - build 6235
