@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+zg 2024-01-05 09:36:01+02:00 - build 6247
+
+1. M#4026: GUID for replace confirmation dialog in editor.
+
+--------------------------------------------------------------------------------
 drkns 2024-01-03 18:53:27+00:00 - build 6246
 
 1. More ranges.
